--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.22.0",
     "@babel/preset-react": "^7.22.0",
     "babel-loader": "^9.1.0",
+    "copy-webpack-plugin": "^13.0.1",
     "core-js": "^3.46.0",
     "css-loader": "^6.8.0",
     "css-minimizer-webpack-plugin": "^7.0.2",
